--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,16 +1,18 @@
 html {
   font-size: 100%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *, *::before, *::after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: "Public Sans", sans-serif;
+  font-family: 'Public Sans', sans-serif;
   line-height: 1.3;
 }
 /*# sourceMappingURL=style.css.map */
