--- a/app/css/style.css
+++ b/app/css/style.css
@@ -14,5 +14,6 @@ body {
   padding: 0;
   font-family: 'Public Sans', sans-serif;
   line-height: 1.3;
+  background-color: #2bb7da;
 }
 /*# sourceMappingURL=style.css.map */
