--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -12,5 +12,26 @@ body {
     padding:0;
     font-family: 'Public Sans', sans-serif;
     line-height: 1.3;
-    background-color: $BrightCyan;
+}
+
+
+
+
+// flex
+
+.flex {
+    display: flex;
+
+    &-jc-c {
+        justify-content: center;
+    }
+
+    &-jc-sb {
+        justify-content: space-between;
+    }
+
+    &-ai-c {
+        align-items: center;
+    }
+
 }
