show header links

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -17,4 +17,14 @@
         }
         
     }
+
+    &-links {
+        
+        a {
+            color:$GrayishBlue;
+        }
+        
+    }
+
+    
 }
