--- a/app/css/style.css
+++ b/app/css/style.css
@@ -16,6 +16,10 @@ body {
   line-height: 1.3;
 }
 
+a, a:visited, a:active {
+  text-decoration: none;
+}
+
 .flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -53,5 +57,9 @@ body {
 
 .header-menu span:not(:last-child) {
   margin-bottom: 5px;
+}
+
+.header-links a {
+  color: #9698a6;
 }
 /*# sourceMappingURL=style.css.map */
