change font menu links

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -21,7 +21,7 @@
     &-links {
         
         a {
-            color:$GrayishBlue;
+            font-size: $font-sm;
         }
         
     }
