--- a/app/css/style.css
+++ b/app/css/style.css
@@ -14,10 +14,12 @@ body {
   padding: 0;
   font-family: 'Public Sans', sans-serif;
   line-height: 1.3;
+  font-size: 1.125rem;
 }
 
 a, a:visited, a:active {
   text-decoration: none;
+  color: #9698a6;
 }
 
 .flex {
@@ -60,6 +62,6 @@ a, a:visited, a:active {
 }
 
 .header-links a {
-  color: #9698a6;
+  font-size: 0.875rem;
 }
 /*# sourceMappingURL=style.css.map */
