--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -12,10 +12,12 @@ body {
     padding:0;
     font-family: 'Public Sans', sans-serif;
     line-height: 1.3;
+    font-size: $font-md;
 }
 
 a, a:visited, a:active {
     text-decoration: none;
+    color:$GrayishBlue;
 }
 
 
