--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -5,3 +5,9 @@ $GrayishBlue: hsl(233, 8%, 62%);
 $LightGrayishBlue: hsl(220, 16%, 96%);
 $VeryLightGray: hsl(0, 0%, 98%);
 $White: hsl(0, 0%, 100%);
+
+
+// fonts
+
+$font-sm: 0.875rem;
+$font-md: 1.125rem; //18px
