--- a/app/css/style.css
+++ b/app/css/style.css
@@ -19,7 +19,6 @@ body {
 
 a, a:visited, a:active {
   text-decoration: none;
-  color: #9698a6;
 }
 
 .flex {
@@ -44,6 +43,16 @@ a, a:visited, a:active {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.button {
+  padding: 1rem 2.18rem;
+  background: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#2bb7da));
+  background: linear-gradient(to right, #31d35c, #2bb7da);
+  border-radius: 50px;
+  color: white;
+  font-size: 0.875rem;
+  font-weight: 700;
 }
 
 .header nav {
