--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -41,9 +41,27 @@ a, a:visited, a:active {
 
 .button {
     padding: 1rem 2.18rem;
-    background: linear-gradient(to right, $LimeGreen, $BrightCyan) ;
+    background: linear-gradient(to right, $LimeGreen, $BrightCyan);
     border-radius: 50px;
     color:white;
     font-size: $font-sm;
-    font-weight: $font-bold;
+    font-weight: $font-reg;
+    transition: opacity 300ms ease-in-out;
+
+    &:hover {
+        opacity: 0.75;
+    }
+}
+
+
+.hide-for-mobile {
+    @include breakpoint-down(medium){
+        display:none;
+    }
+}
+
+.hide-for-desktop {
+    @include breakpoint-up(large){
+        display: none;
+    }
 }
