--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,8 +1,20 @@
 .header {
+    
 
     nav {
         padding: 20px;
+        height: 5rem;
     }
+
+    &-logo  {
+
+        img {
+             width: 8.75rem;
+            height: 1.4375rem;
+        }
+    }
+
+
 
     &-menu {
         span {
@@ -21,9 +33,40 @@
     &-links {
         
         a {
+            position: relative;
             font-size: $font-sm;
+            color:$GrayishBlue;
+            transition: color 300ms ease-in-out;
+            
+            
+            &:not(:last-child) {
+                margin-right: 32px;
+            }
+
+            &::before {
+                content: " ";
+                display:block;
+                height: 5px;
+                position:absolute;
+                left: 0;
+                right: 0;
+                bottom: -1.875rem;
+                background:linear-gradient(to right, $LimeGreen, $BrightCyan);
+                opacity: 0;
+                transition: opacity 300ms ease-in-out;
+            }
+
+            &:hover {
+                color: $DarkBlue;
+
+                &::before {
+                    opacity: 1;
+                }
+    
+            }
+
         }
-        
+
     }
 
    
