--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -22,9 +22,24 @@
             width: 22px;
             height: 2px;
             background-color: $DarkBlue;
+            transition: all 300ms ease-in-out;
+            transform-origin: 1px 1px;
 
             &:not(:last-child){
                 margin-bottom: 5px;
+            }
+
+        }
+
+        &.open {
+            span:first-child{
+                transform: rotate(45deg)
+            }
+            span:nth-child(2){
+                opacity: 0;
+            }
+            span:last-child{
+                transform: rotate(-45deg)
             }
         }
         
