--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -12,19 +12,7 @@
             transform: rotate(-45deg)
         }
         
-        
-        .overlay {
-            position: fixed;
-            z-index: 1;
-            top:60px;
-            bottom: 0px;
-            right: 0px;
-            left: 0px;
-            background-image: linear-gradient($DarkBlue, transparent);
-            
-        }
     }
-
 
 
     nav {
@@ -98,8 +86,18 @@
 
     }
 
-
-
+    .overlay {
+        position: fixed;
+        opacity: 0;
+        z-index: 1;
+        top:60px;
+        bottom: 0px;
+        right: 0px;
+        left: 0px;
+        background-image: linear-gradient($DarkBlue, transparent);
+        
+    }
 
 }
+
 
