--- a/app/css/style.css
+++ b/app/css/style.css
@@ -218,7 +218,7 @@ a, a:visited, a:active {
 }
 
 .header .overlay {
-  position: fixed;
+  position: absolute;
   opacity: 0;
   z-index: 1;
   top: 60px;
