--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -87,7 +87,7 @@
     }
 
     .overlay {
-        position: fixed;
+        position: absolute;
         opacity: 0;
         z-index: 1;
         top:60px;
