--- a/app/css/style.css
+++ b/app/css/style.css
@@ -87,6 +87,10 @@ body {
   font-size: 1.125rem;
 }
 
+.container {
+  margin: 1.5rem;
+}
+
 a, a:visited, a:active {
   text-decoration: none;
 }
@@ -167,7 +171,7 @@ a, a:visited, a:active {
   height: 1.4375rem;
 }
 
-.header-menu span {
+.header-toggle span {
   display: block;
   width: 22px;
   height: 2px;
@@ -178,7 +182,7 @@ a, a:visited, a:active {
           transform-origin: 1px 1px;
 }
 
-.header-menu span:not(:last-child) {
+.header-toggle span:not(:last-child) {
   margin-bottom: 5px;
 }
 
@@ -227,5 +231,20 @@ a, a:visited, a:active {
   left: 0px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#2d314d), to(transparent));
   background-image: linear-gradient(#2d314d, transparent);
+}
+
+.header-menu {
+  display: block;
+  background-color: white;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  border-radius: 5px;
+}
+
+.header-menu a {
+  display: block;
+  padding: 0.625rem;
+  color: #2d314d;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
