--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -15,6 +15,10 @@ body {
     font-size: $font-md;
 }
 
+.container {
+    margin: 1.5rem;
+}
+
 a, a:visited, a:active {
     text-decoration: none;
 }
