--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -12,6 +12,7 @@
             transform: rotate(-45deg)
         }
         
+
     }
 
 
@@ -30,7 +31,7 @@
 
 
 
-    &-menu {
+    &-toggle {
         span {
             display: block;
             width: 22px;
@@ -96,6 +97,21 @@
         left: 0px;
         background-image: linear-gradient($DarkBlue, transparent);
         
+    }
+
+    &-menu {
+        display: block;
+        background-color: $White;
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+        border-radius: 5px;
+          
+        a {
+            display: block;
+            padding: 0.625rem;
+            color: $DarkBlue;
+            text-align: center;
+        }
     }
 
 }
