--- a/app/css/style.css
+++ b/app/css/style.css
@@ -235,10 +235,15 @@ a, a:visited, a:active {
 
 .header-menu {
   display: block;
+  visibility: hidden;
+  position: absolute;
+  z-index: 1;
+  width: 90%;
   background-color: white;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   border-radius: 5px;
+  padding: 1.5rem 0 1.5rem 0;
 }
 
 .header-menu a {
