--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -101,10 +101,15 @@
 
     &-menu {
         display: block;
+        visibility: hidden;
+        position: absolute;
+        z-index: 1;
+        width: 90%;
         background-color: $White;
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
         border-radius: 5px;
+        padding:1.5rem 0 1.5rem 0;
           
         a {
             display: block;
