--- a/app/css/style.css
+++ b/app/css/style.css
@@ -88,7 +88,7 @@ body {
 }
 
 .container {
-  margin: 1.5rem;
+  padding: 0 1.5rem;
 }
 
 a, a:visited, a:active {
@@ -163,7 +163,7 @@ a, a:visited, a:active {
 
 .header nav {
   padding: 20px;
-  height: 5rem;
+  height: 4rem;
 }
 
 .header-logo img {
@@ -238,10 +238,12 @@ a, a:visited, a:active {
   visibility: hidden;
   position: absolute;
   z-index: 1;
-  width: 90%;
+  width: calc(100% - 3rem);
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   background-color: white;
   margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
   border-radius: 5px;
   padding: 1.5rem 0 1.5rem 0;
 }
