--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -18,7 +18,7 @@
 
     nav {
         padding: 20px;
-        height: 5rem;
+        height: 4rem;
     }
 
     &-logo  {
@@ -104,10 +104,11 @@
         visibility: hidden;
         position: absolute;
         z-index: 1;
-        width: 90%;
+        width: calc(100% - 3rem); // 1.5 rem from each side
+        left: 50%;
+        transform: translateX(-50%);
         background-color: $White;
         margin-top: 1.5rem;
-        margin-bottom: 1.5rem;
         border-radius: 5px;
         padding:1.5rem 0 1.5rem 0;
           
