--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,6 +13,10 @@ body {
     font-family: 'Public Sans', sans-serif;
     line-height: 1.3;
     font-size: $font-md;
+
+    &.noscroll {
+        overflow: hidden;
+    }
 }
 
 .container {
