--- a/app/css/style.css
+++ b/app/css/style.css
@@ -258,4 +258,24 @@ a, a:visited, a:active {
   color: #2d314d;
   text-align: center;
 }
+
+.section1-image {
+  position: relative;
+  background-image: url("/images/bg-intro-mobile.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 50% 50%;
+  min-height: 17.625rem;
+}
+
+.section1-image::before {
+  content: "";
+  position: absolute;
+  background-image: url("/images/image-mockups.png");
+  background-repeat: no-repeat;
+  background-size: 90%;
+  background-position: center bottom;
+  height: 100%;
+  width: 100%;
+}
 /*# sourceMappingURL=style.css.map */
