--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -20,7 +20,11 @@ body {
 }
 
 .container {
-    padding: 0 1.5rem;
+    padding: 2.25rem 1.5rem 2.25rem 1.5rem;
+}
+
+h1, h2, h3 {
+    margin-top: 0px;
 }
 
 a, a:visited, a:active {
@@ -48,6 +52,7 @@ a, a:visited, a:active {
 }
 
 .button {
+    display:inline-block;
     padding: 1rem 2.18rem;
     background: linear-gradient(to right, $LimeGreen, $BrightCyan);
     border-radius: 50px;
