--- a/app/css/style.css
+++ b/app/css/style.css
@@ -264,6 +264,17 @@ a, a:visited, a:active {
   text-align: center;
 }
 
+@media (min-width: 64em) {
+  .section1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .section1-image {
   position: relative;
   background-image: url("/images/bg-intro-mobile.svg");
@@ -271,6 +282,19 @@ a, a:visited, a:active {
   background-size: 100%;
   background-position: 50% 50%;
   min-height: 17.625rem;
+}
+
+@media (min-width: 64em) {
+  .section1-image {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    min-height: 41rem;
+    background-image: url("/images/bg-intro-desktop.svg");
+  }
 }
 
 .section1-image::before {
@@ -288,6 +312,17 @@ a, a:visited, a:active {
   display: inline-block;
   text-align: center;
   font-weight: 300;
+}
+
+@media (min-width: 64em) {
+  .section1-text {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
 }
 
 .section1-text h1 {
