--- a/app/css/style.css
+++ b/app/css/style.css
@@ -93,6 +93,8 @@ body.noscroll {
 
 .container {
   padding: 2.25rem 1.5rem 2.25rem 1.5rem;
+  max-width: 70rem;
+  margin: 0 auto;
 }
 
 h1, h2, h3 {
@@ -286,14 +288,15 @@ a, a:visited, a:active {
 
 @media (min-width: 64em) {
   .section1-image {
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    -webkit-box-flex: 3;
+        -ms-flex: 3;
+            flex: 3;
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
-    min-height: 41rem;
+    height: 41rem;
     background-image: url("/images/bg-intro-desktop.svg");
+    background-position: left center;
   }
 }
 
@@ -316,9 +319,9 @@ a, a:visited, a:active {
 
 @media (min-width: 64em) {
   .section1-text {
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    -webkit-box-flex: 2;
+        -ms-flex: 2;
+            flex: 2;
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
