--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -20,9 +20,44 @@ body {
 }
 
 .container {
-    padding: 2.25rem 1.5rem 2.25rem 1.5rem;
     max-width: 70rem;
     margin: 0 auto;
+
+    &-pd-t {
+        padding-top: 2.25rem;
+    }
+
+    &-pd-r {
+        padding-right: 1.5rem;
+    }
+
+    &-pd-b {
+        padding-bottom: 2.25rem;
+    }
+
+    &-pd-l {
+        padding-left: 1.5rem;
+    }
+
+
+    &-pd-tb {
+        padding-top: 2.25rem;
+        padding-bottom: 2.25rem;
+    }
+
+    &-pd-lr {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+
+    &-pd-all {
+        padding-top: 2.25rem;
+        padding-bottom: 2.25rem;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+
+
 }
 
 h1, h2, h3 {
