add flex to section2

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -13,6 +13,7 @@ body {
     font-family: 'Public Sans', sans-serif;
     line-height: 1.3;
     font-size: $font-md;
+    height: 300vh;
 
     &.noscroll {
         overflow: hidden;
