--- a/app/css/style.css
+++ b/app/css/style.css
@@ -85,6 +85,7 @@ body {
   font-family: 'Public Sans', sans-serif;
   line-height: 1.3;
   font-size: 1.125rem;
+  height: 300vh;
 }
 
 body.noscroll {
@@ -425,6 +426,32 @@ a, a:visited, a:active {
   .section1-text p {
     font-size: 1.0625rem;
     line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 40em) {
+  .section2-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media (min-width: 40em) {
+  .section2-item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+  }
+}
+
+@media (min-width: 64em) {
+  .section2-item {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
   }
 }
 /*# sourceMappingURL=style.css.map */
