--- a/app/css/style.css
+++ b/app/css/style.css
@@ -132,6 +132,39 @@ body.noscroll {
 
 h1, h2, h3 {
   margin-top: 0px;
+  color: #2d314d;
+  font-weight: 300;
+  line-height: 2.1625rem;
+}
+
+h1 {
+  font-size: 2.375rem;
+}
+
+@media (min-width: 64em) {
+  h1 {
+    font-size: 3.3125rem;
+  }
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+@media (min-width: 64em) {
+  h2 {
+    font-size: 2.5625rem;
+  }
+}
+
+h3 {
+  font-size: 1.37rem;
+}
+
+@media (min-width: 64em) {
+  h3 {
+    font-size: 1.625rem;
+  }
 }
 
 a, a:visited, a:active {
@@ -402,10 +435,6 @@ a, a:visited, a:active {
 }
 
 .section1-text h1 {
-  color: #2d314d;
-  font-size: 2rem;
-  font-weight: 300;
-  line-height: 2.1625rem;
   margin-bottom: 1.5rem;
 }
 
@@ -431,6 +460,13 @@ a, a:visited, a:active {
 
 .section2 {
   background-color: #f3f4f6;
+  text-align: center;
+}
+
+@media (min-width: 40em) {
+  .section2 {
+    text-align: left;
+  }
 }
 
 @media (min-width: 40em) {
