--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -97,6 +97,14 @@ h3 {
 }
 
 
+p {
+    color: $GrayishBlue;
+    margin-bottom: 2.35rem;
+    font-size: 1rem; //15px;
+
+    
+}
+
 
 
 a, a:visited, a:active {
