--- a/app/scss/_section2.scss
+++ b/app/scss/_section2.scss
@@ -28,6 +28,17 @@
         }
     }
 
+    
+    &-text {
+        
+        p {
+            @include breakpoint-up(large){
+                font-size: 1.0625rem;
+            }
+
+        }
+        
+    }
 
 
     
