--- a/app/css/style.css
+++ b/app/css/style.css
@@ -83,7 +83,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Public Sans', sans-serif;
-  line-height: 1.3;
+  line-height: 1.5;
   font-size: 1.125rem;
   height: 300vh;
 }
@@ -170,7 +170,6 @@ h3 {
 p {
   color: #9698a6;
   margin-bottom: 2.35rem;
-  font-size: 1rem;
 }
 
 a, a:visited, a:active {
@@ -452,7 +451,7 @@ a, a:visited, a:active {
 }
 
 .section1-text p {
-  font-size: 0.9375rem;
+  font-size: 0.9rem;
 }
 
 @media (min-width: 64em) {
@@ -499,8 +498,24 @@ a, a:visited, a:active {
   }
 }
 
+.section2-icon {
+  margin-bottom: 1.8125rem;
+}
+
+.section2-subheader {
+  margin-bottom: 1.8125rem;
+}
+
+.section2-text {
+  margin-bottom: 2.375rem;
+}
+
+.section2 p {
+  font-size: 0.9rem;
+}
+
 @media (min-width: 64em) {
-  .section2-text p {
+  .section2 p {
     font-size: 1.0625rem;
   }
 }
