--- a/app/scss/_section2.scss
+++ b/app/scss/_section2.scss
@@ -10,7 +10,6 @@
 
     &-container {
 
-
         @include breakpoint-up(medium){
             display: flex;
             flex-wrap: wrap;
@@ -18,7 +17,21 @@
 
     }
 
+    &-header {
+        padding-left: 0.9375rem;
+        padding-right: 0.9375rem;
+
+        @include breakpoint-up(large){
+            width: 60%;
+            margin-bottom: 4.75rem;
+        }
+       
+    }
+
     &-item {
+        padding-left: 0.9375rem;
+        padding-right: 0.9375rem;
+
         @include breakpoint-up(medium){
             flex: 0 0 50%;
         }
@@ -31,22 +44,27 @@
 
     &-icon {
         margin-bottom: 1.8125rem;
+
+        @include breakpoint-up(large){
+            margin-bottom: 2.75rem;
+        }
     }
 
     &-subheader {
         margin-bottom: 1.8125rem;
+
+        @include breakpoint-up(large){
+            margin-bottom: 2.75rem;
+        }
     }
     
     &-text {
         margin-bottom: 2.375rem;
-
-        
-       
         
     }
 
     p {
-        font-size: 0.9rem;
+        font-size: 0.9375rem;
 
         @include breakpoint-up(large){
             font-size: 1.0625rem;
