--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,9 @@
 @import "_variables";
 @import "_mixins";
 @import "_animations";
+
 @import "_globals";
 @import "_header";
 @import "_section1";
 @import "_section2";
+@import "_section3";
