--- a/app/css/style.css
+++ b/app/css/style.css
@@ -551,11 +551,18 @@ a, a:visited, a:active {
 
 .section3 {
   background-color: #fafafa;
-  text-align: center;
 }
 
 .section3 h2 {
   margin-bottom: 2.375rem;
+  text-align: center;
+}
+
+@media (min-width: 64em) {
+  .section3 h2 {
+    margin-bottom: 3.625rem;
+    text-align: left;
+  }
 }
 
 .section3-grid {
@@ -582,6 +589,15 @@ a, a:visited, a:active {
   overflow: hidden;
   background-color: white;
   border-radius: 10px;
+  -webkit-box-shadow: 0px 2px 30px #80808054;
+          box-shadow: 0px 2px 30px #80808054;
+  -webkit-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
+}
+
+.section3-item:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .section3-image {
@@ -607,6 +623,12 @@ a, a:visited, a:active {
   color: #2d314d;
   margin-bottom: 1.0625rem;
   line-height: 1.2;
+}
+
+@media (min-width: 64em) {
+  .section3-title {
+    margin-bottom: 0.875rem;
+  }
 }
 
 .section3-description {
