--- a/app/scss/_section3.scss
+++ b/app/scss/_section3.scss
@@ -3,10 +3,16 @@
 .section3 {
 
     background-color: $VeryLightGray;
-    text-align: center;
+    
 
     h2 {
         margin-bottom: 2.375rem;
+        text-align: center;
+
+        @include breakpoint-up(large){
+            margin-bottom: 3.625rem;
+            text-align: left;
+        }
     }
     
     &-grid {
@@ -27,8 +33,13 @@
         overflow: hidden;
         background-color: $White;
         border-radius: 10px;
-        
-        
+        box-shadow: 0px 2px 30px #80808054;
+        transition: all 150ms ease-in-out;
+
+        &:hover {
+            transform: scale(1.05);
+        }
+
     }
 
     &-image {
@@ -55,6 +66,10 @@
         color: $DarkBlue;
         margin-bottom: 1.0625rem;
         line-height: 1.2;
+
+        @include breakpoint-up(large) {
+            margin-bottom: 0.875rem;
+        }
     }
     &-description {
         font-size: .875rem;
