add footer in index html

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -634,4 +634,8 @@ a, a:visited, a:active {
 .section3-description {
   font-size: .875rem;
 }
+
+.footer {
+  background-color: #2d314d;
+}
 /*# sourceMappingURL=style.css.map */
