edit footer sass

--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -18,9 +18,21 @@
 
     &-links {
 
+        &.col1 {
+
+        }
+        &.col2 {
+
+        }
+
     }
 
-    &-credits {
+    &-cta {
 
+        
+    }
+
+    &-copyright {
+        
     }
 }
