edit section1 pic for mobile

--- a/app/scss/_section1.scss
+++ b/app/scss/_section1.scss
@@ -14,86 +14,23 @@
 
     &-image {
         position:relative;
-        // background-image: url('/images/bg-intro-mobile.svg');
-        // background-repeat: no-repeat;
-        // background-size: 100%;
-        background-image: none;
-        // background-position: 50% 50%;
         min-height: 17.625rem;
-
-
-        &::before {
-            content: "";
-            position: absolute;
-            background-image: url('/images/bg-intro-mobile.svg');
-            background-repeat: no-repeat;
-            background-size: 100%;
-            background-position: 50% 50%;
-            height: 100%;
-            width: 100%
-        }
-
-
-
+        background-image: url('/images/bg-intro-mobile.svg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        
+        
         &::after {
             content: "";
             position: absolute;
             background-image: url('/images/image-mockups.png');
             background-repeat: no-repeat;
-            background-size: 90%;
+            background-size: 95%;
             background-position: center bottom;
             height: 100%;
             width: 100%;
         }
-
-
-        @include breakpoint-up(medium) {
-
-            &::before {
-                background-size: 100%;
-                background-position: 50% 50%;
-                height: 100%;
-                width: 100%;
-            }
-
-            &::after {
-                background-size: 65%;
-                background-position: 50% 93%;
-                height: 100%;
-                width: 100%;
-            }
-
-
-
-        }
-
-        @include breakpoint-up(large) {
-            flex: 3;
-            order: 2;
-            height: 41rem;
-            background-image: none;
-
-            &::before {
-                background-image: url('/images/bg-intro-desktop.svg');
-                background-size: 147%;
-                background-position: 0% 179%;
-                height: 127%;
-                width: 125%
-            }
-
-            &::after {
-                background-size: 89%;
-                background-position: 200% 95%;
-                height: 116%;
-                width: 125%;
-            }
-
-
-
-
-
-        }
-        
 
         
     }
