--- a/app/css/style.css
+++ b/app/css/style.css
@@ -86,6 +86,7 @@ body {
   line-height: 1.5;
   font-size: 1.125rem;
   height: 300vh;
+  overflow-x: hidden;
 }
 
 body.noscroll {
@@ -354,19 +355,11 @@ a, a:visited, a:active {
 
 .section1-image {
   position: relative;
-  background-image: none;
   min-height: 17.625rem;
-}
-
-.section1-image::before {
-  content: "";
-  position: absolute;
   background-image: url("/images/bg-intro-mobile.svg");
+  background-size: cover;
   background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: 50% 50%;
-  height: 100%;
-  width: 100%;
+  background-position: center center;
 }
 
 .section1-image::after {
@@ -374,51 +367,10 @@ a, a:visited, a:active {
   position: absolute;
   background-image: url("/images/image-mockups.png");
   background-repeat: no-repeat;
-  background-size: 90%;
+  background-size: 95%;
   background-position: center bottom;
   height: 100%;
   width: 100%;
-}
-
-@media (min-width: 40em) {
-  .section1-image::before {
-    background-size: 100%;
-    background-position: 50% 50%;
-    height: 100%;
-    width: 100%;
-  }
-  .section1-image::after {
-    background-size: 65%;
-    background-position: 50% 93%;
-    height: 100%;
-    width: 100%;
-  }
-}
-
-@media (min-width: 64em) {
-  .section1-image {
-    -webkit-box-flex: 3;
-        -ms-flex: 3;
-            flex: 3;
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
-    height: 41rem;
-    background-image: none;
-  }
-  .section1-image::before {
-    background-image: url("/images/bg-intro-desktop.svg");
-    background-size: 147%;
-    background-position: 0% 179%;
-    height: 127%;
-    width: 125%;
-  }
-  .section1-image::after {
-    background-size: 89%;
-    background-position: 234% 95%;
-    height: 116%;
-    width: 125%;
-  }
 }
 
 .section1-text {
