--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -14,6 +14,7 @@ body {
     line-height: 1.5;
     font-size: $font-md;
     height: 300vh;
+    overflow-x: hidden;
 
     &.noscroll {
         overflow: hidden;
