--- a/app/css/style.css
+++ b/app/css/style.css
@@ -362,6 +362,32 @@ a, a:visited, a:active {
   background-position: center center;
 }
 
+@media (min-width: 64em) {
+  .section1-image {
+    -webkit-box-flex: 3;
+        -ms-flex: 3;
+            flex: 3;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    height: 41rem;
+    background-image: none;
+  }
+}
+
+@media (min-width: 64em) {
+  .section1-image::before {
+    content: "";
+    position: absolute;
+    background-image: url("/images/bg-intro-desktop.svg");
+    background-size: 145%;
+    background-position: 0 85%;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 125%;
+  }
+}
+
 .section1-image::after {
   content: "";
   position: absolute;
@@ -369,8 +395,15 @@ a, a:visited, a:active {
   background-repeat: no-repeat;
   background-size: 95%;
   background-position: center bottom;
-  height: 100%;
-  width: 100%;
+  height: 116%;
+  width: 125%;
+}
+
+@media (min-width: 40em) {
+  .section1-image::after {
+    background-size: 95%;
+    background-position: 300% 86%;
+  }
 }
 
 .section1-text {
