--- a/app/scss/_section1.scss
+++ b/app/scss/_section1.scss
@@ -19,8 +19,32 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
+
         
+        @include breakpoint-up(large) {
+            flex:3;
+            order:2;
+            height: 41rem;
+            background-image: none;
+            
+        }
+
+        &::before {
+
+
+            @include breakpoint-up(large) {
+                content: "";
+                position: absolute;
+                background-image: url('/images/bg-intro-desktop.svg');
+                background-size: 145%;
+                background-position: 0 85%;
+                background-repeat: no-repeat;
+                height: 100%;
+                width: 125%
+            }
+        }
         
+
         &::after {
             content: "";
             position: absolute;
@@ -28,9 +52,18 @@
             background-repeat: no-repeat;
             background-size: 95%;
             background-position: center bottom;
-            height: 100%;
-            width: 100%;
+            height: 116%;
+            width: 125%;
+
+            @include breakpoint-up(medium){
+                
+                background-size: 95%;
+                background-position: 300% 86%
+
+            }
         }
+
+        
 
         
     }
