edit image section responsive

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -399,7 +399,15 @@ a, a:visited, a:active {
   width: 125%;
 }
 
-@media (min-width: 40em) {
+@media (max-width: 63.9375em) {
+  .section1-image::after {
+    width: 100%;
+    background-size: 90%;
+    background-position: 50% 96%;
+  }
+}
+
+@media (min-width: 64em) {
   .section1-image::after {
     background-size: 95%;
     background-position: 300% 86%;
