--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,6 +1,14 @@
 .footer {
 
     background-color: $DarkBlue;
+    color: $White;
+    display: block;
+    padding: 2.5rem;
+    text-align: center;
+
+    a {
+        color: $White
+    }
 
     &-container {
 
@@ -8,31 +16,48 @@
 
     &-logo {
         
-        
+        height: 1.5625rem;
+        width: 8.875rem;
+        margin-bottom: 1.875rem;
     }
 
     &-icons {
 
+        margin-bottom: 1.875rem;
 
+        img {
+            height: 1.625rem;
+            
+        }
+        a:not(:last-child){
+            margin-right: 1rem;
+        }
     }
 
     &-links {
+        display: flex;
+        flex-direction: column;
+        font-size: 0.875rem;
+        line-height: 2;
 
         &.col1 {
 
         }
         &.col2 {
+            margin-bottom: 1.875rem;
 
         }
 
     }
 
     &-cta {
-
+        margin-bottom: 1.875rem;
         
     }
 
     &-copyright {
-        
+        margin-bottom: 1.875rem;
+        color: $GrayishBlue;
+        font-size: 0.875rem;
     }
 }
