--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -9,6 +9,8 @@
 
     a {
         color: $White;
+
+       
     }
 
     &-container {
@@ -44,21 +46,28 @@
 
     &-icons {
 
-        @include breakpoint-down(medium){
-            margin-bottom: 1.875rem;
-        }
+        
 
-        img {
-            height: 1.625rem;
-            
-        }
         a:not(:last-child){
             margin-right: 1rem;
+        }
+
+        @include breakpoint-down(medium){
+            margin-bottom: 1.875rem;
         }
 
         @include breakpoint-up(large){
             grid-area: icons;
         }
+
+        a svg path{
+            transition: all 150ms ease-in-out;
+            
+            &:hover {
+                fill: $LimeGreen;
+            }
+        }
+        
     }
 
     &-links {
@@ -71,6 +80,16 @@
             line-height: 2;
             
         }   
+
+        a {
+            transition: color 120ms ease-in-out;
+
+            &:hover {
+                color: $LimeGreen;
+            }
+
+        }
+        
     
 
         &.col1 {
@@ -103,6 +122,7 @@
             grid-area: cta;
             justify-self: end;
         }
+        
     }
 
     &-copyright {
