--- a/app/scss/_section1.scss
+++ b/app/scss/_section1.scss
@@ -15,7 +15,7 @@
     &-image {
         position:relative;
         min-height: 17.625rem;
-        background-image: url('/images/bg-intro-mobile.svg');
+        background-image: url('../../images/bg-intro-mobile.svg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
@@ -36,7 +36,7 @@
             @include breakpoint-up(large) {
                 content: "";
                 position: absolute;
-                background-image: url('/images/bg-intro-desktop.svg');
+                background-image: url('../../images/bg-intro-desktop.svg');
                 background-size: 145%;
                 background-position: 0 85%;
                 background-repeat: no-repeat;
@@ -49,7 +49,7 @@
         &::after {
             content: "";
             position: absolute;
-            background-image: url('/images/image-mockups.png');
+            background-image: url('../../images/image-mockups.png');
             background-repeat: no-repeat;
             background-size: 95%;
             background-position: center bottom;
